# W4Agent

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  generate_architecture.py  generate_ppt.py  skills-lock.json  中期答辩PPT.pptx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agent/: engine.py  orchestrator.py
backend/agent/agents/: base.py  crawler_agent.py  detector_agent.py  master_agent.py  reporter_agent.py
backend/agent/llm/: provider.py
backend/agent/memory/: long_term.py  short_term.py
backend/agent/prompts/: crawler.py  detector.py  master.py  reporter.py
backend/agent/tools/: a11y_tools.py  browser_tools.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_annotated_screenshot_path.py  f8aff87dae68_initial.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: annotations.py  issues.py  pages.py  projects.py  reports.py  router.py  tasks.py
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/db/: redis.py  session.py
backend/app/models/: __init__.py  agent_memory.py  annotation.py  base.py  issue.py  page.py  project.py  report.py  task.py
backend/app/schemas/: annotation.py  issue.py  page.py  project.py  report.py  task.py  ws_message.py
backend/app/services/: jira_service.py  notification_service.py  report_service.py  task_service.py
backend/crawler/: action_executor.py  adaptive_crawler.py  deduplicator.py  event_responder.py  heuristics.py  page_analyzer.py  state_graph.py
backend/detector/: detection_engine.py
backend/detector/ai_based/: visual_analyzer.py
backend/detector/rule_based/: rule_registry.py  wcag_rules.py
docs/: baogao.txt  (+11 more)
(+38 files in other folders)
